@@ -325,16 +325,10 @@
   <block id="f7585dca02f941492ce2a56cecf7b71f" category="list-text">Dateipfad</block>
   <block id="6bc0493d09cc429d2ec14f5a822b5e0a" category="paragraph">Denken Sie also daran, Ihre wichtigen Geschäftsdaten über die Richtlinien zur Unveränderlichkeit kritischer Daten im Panel „_kritische Daten“ anzuzeigen.</block>
   <block id="c28bb24720dd383d7a0b5ae4027369b4" category="section-title">Ransomware-Vorfälle auf Ihren Systemen erkannt</block>
-  <block id="c7630d19591488ab3a1607b637eabc54" category="paragraph">Ransomware-Vorfälle, die auf Ihren gemanagten Systemen erkannt wurden, werden als Warnmeldungen im Fenster „ _Ransomware Incidents_“ angezeigt. Dazu gehören Datenbeschädigung und Verschlüsselungereignisse. In diesem Fenster wird die Anzahl der verschlüsselten Dateien angezeigt, die im verdächtigen Volume identifiziert wurden, die Art der Dateierweiterungen und der Zeitpunkt, zu dem der Angriff stattgefunden hat.</block>
   <block id="16135acbc32c7e8ab88519d9d0f56666" category="inline-image-macro">Ein Screenshot der Ransomware-Vorfälle Panel.</block>
   <block id="7ad0aa30c7cf42540304daceefad2ef3" category="paragraph"><block ref="7ad0aa30c7cf42540304daceefad2ef3" category="inline-image-macro-rx" type="image"></block></block>
   <block id="ec9614a46239aa59499c4a94e919963a" category="inline-link">Hier erfahren Sie mehr</block>
   <block id="67b02887410826f72fc672a3a4e7200d" category="paragraph">Aktuell werden ONTAP Cluster vor Ort unterstützt, auf denen Autonomous Ransomware Protection (ARP) ausgeführt wird. ARP nutzt Workload-Analysen in NAS-Umgebungen (NFS und SMB), um ungewöhnliche Aktivitäten, die auf einen Ransomware-Angriff hinweisen könnten, proaktiv zu erkennen und zu warnen.<block ref="f3117a633e55dd0ab6cb8e66626e971f" category="inline-link-rx"></block>.</block>
-  <block id="0d4dc95bdc8cb2ed3a700023c01033d4" category="inline-link">Weitere Informationen zu Cloud Secure</block>
-  <block id="89da35073197afa30d21c49a3c60c2f3" category="paragraph">Um die Vorfälle zu analysieren, müssen Sie NetApp Cloud Secure installiert und konfiguriert haben.<block ref="1623a7989c41e85d14f0f92414ba0b90" category="inline-link-rx"></block>. Dann können Sie auf die Schaltfläche *Analyse* klicken, um Empfehlungen für Ihre nächsten Schritte bei der Lösung des Problems zu erhalten.</block>
-  <block id="2cf577666472c7688899bb4d6dc40cb1" category="list-text">Sie müssen über einen lokalen ONTAP-Cluster verfügen, der ONTAP 9.10.1 oder höher ausführt</block>
-  <block id="00c4428a8d1761dc9bb876ab9d4eb18f" category="list-text">Sie müssen über eine *MT_EK_MGMT*-Lizenz (Multi-Tenant Key Management) (ONTAP 9.10) oder *Anti_Ransomware*-Lizenz (ONTAP 9.11.1 +) auf mindestens einem Knoten im Cluster verfügen</block>
-  <block id="c9f8f33520cc7d63da9dfc7fbbdd2b67" category="list-text">NetApp ARP muss 30 Tage lang, auch „dry run“ genannt, aktiviert sein, bevor die Daten in den „aktiven Modus“ gewechselt werden können, damit ausreichend Zeit zur Beurteilung der Workload-Eigenschaften und zur korrekten Meldung verdächtiger Ransomware-Angriffe vorhanden ist.</block>
   <block id="d759e97ebb04097c8dee30fc845cc996" category="summary">Alles zum Schutz vor Ransomware.</block>
   <block id="ca151642aca499fd94ee2307ea084a75" category="doc">Was ist neu mit Ransomware Schutz</block>
   <block id="7c16758604271d7ef3055d0e5962ec82" category="section-title">Neue Panels zur Anzeige Ihrer gesamten Ransomware-Schutzpunktzahl und empfohlenen Maßnahmen</block>
@@ -446,4 +440,27 @@
   <block id="a425d9c06967f2c17f030b85fe3a25f2" category="list-text">Unbekannte Berechtigungen - die Elemente, die Data Sense als unbekannte Berechtigungen betrachtet</block>
   <block id="b28a6eb89824dac30a69244f881f75b8" category="paragraph">Das _Ransomware Protection Score_ Panel zeigt die Gesamtpunktzahl und die Bereiche der Cybersicherheit, in denen potenzielle Probleme bestehen. Im Panel _Recommended Actions_ werden die möglichen Maßnahmen aufgeführt, die Sie ergreifen können, um Ihre Widerstandsfähigkeit gegen einen Ransomware-Angriff zu verbessern, und es wird ein Link zur Untersuchung der Probleme angezeigt, damit Sie die Maßnahmen gegebenenfalls anwenden können. Diese beiden neuen Felder arbeiten zusammen, um zu ermitteln, wie stabil Ihre Daten bei einem Ransomware-Angriff ist und was Sie tun können, um Ihren Wert zu verbessern.<block ref="020baa7d67cad4299bb33f9b5861968a" category="inline-link-rx"></block>.</block>
   <block id="65cc8077d8a23c409dba89c28ab7cb27" category="paragraph">Ransomware-Angriffe können das Unternehmen Zeit, Ressourcen und Image-Schäden kosten. Mit dem BlueXP (früher Cloud Manager) Ransomware Protection Service können Sie relevante Informationen zur Cybersicherheit anzeigen und beurteilen, wie widerstandsfähig Ihr Unternehmen ist für einen Cyber-Angriff. Außerdem erhalten Sie eine Liste mit Alarmen und Lösungen, um Ihre Daten sicherer zu machen.</block>
+  <block id="c9932149b57d3790fb67d57d3f549d5a" category="summary">Sie können den Status von Ransomware-Warnungen im BlueXP Notification Center anzeigen. Sie können außerdem Benachrichtigungen per E-Mail konfigurieren, damit Sie auch dann über wichtige Systemaktivitäten informiert werden können, wenn Sie nicht beim System angemeldet sind.</block>
+  <block id="34384840b84e2c0d67404dc4d05b4da2" category="doc">Monitoring des Status von Ransomware-Warnmeldungen</block>
+  <block id="40da6f1400e45d080a97992a6a539894" category="inline-image-macro">Benachrichtigungsglocke</block>
+  <block id="456d53eac33bb23ff00f9d4ca9ce9937" category="paragraph">Das Notification Center verfolgt den Fortschritt von Ransomware-Zwischenfällen und kann so überprüfen, ob sie gelöst wurden oder nicht. Sie können die Benachrichtigungen anzeigen, indem Sie auf die Schaltfläche ( klicken<block ref="43f42c88e58852b6ee8c75c986a067e7" category="inline-image-macro-rx" type="image"></block>) In der BlueXP-Menüleiste. Sie können BlueXP auch so konfigurieren, dass Benachrichtigungen per E-Mail als Warnmeldungen gesendet werden.</block>
+  <block id="a3f6a061298a9dbeb547d2e213763eee" category="paragraph">Derzeit gibt es ein Ereignis, das E-Mail-Benachrichtigungen auslöst:</block>
+  <block id="01c236efa847517aec154a45e404d759" category="list-text">Potenzielle Ransomware-Angriffe auf Ihrem System erkannt</block>
+  <block id="0be25f818a977f6de990876935286400" category="paragraph">Standardmäßig erhalten BlueXP-Kontoadministratoren E-Mails für alle „kritischen“ und „Empfehlungsmeldungen“. Alle anderen Benutzer und Empfänger sind standardmäßig so konfiguriert, dass sie keine Benachrichtigungs-E-Mails erhalten. E-Mails können an alle BlueXP Benutzer, die Teil Ihres NetApp Cloud-Kontos sind, oder an alle anderen Empfänger gesendet werden, die auf Sicherheitsvorfälle bei Ransomware achten müssen.</block>
+  <block id="34149b0fecb1f5160db9e0276de38567" category="paragraph">Sie müssen die Benachrichtigungstyp "kritisch" auswählen, um die Ransomware Protection E-Mail-Benachrichtigungen zu erhalten.</block>
+  <block id="57b65c16b4e713b68f97572b861b02ad" category="inline-link">Erfahren Sie mehr über das Benachrichtigungscenter</block>
+  <block id="3e4cc32d4d7db3b984467597d5dc7d9c" category="paragraph"><block ref="42c56ff23a5f1bc337b373c58aaa2d9d" category="inline-link-rx"></block> Und wie Sie Alarmierung bei Ransomware-Sicherungsvorfällen per E-Mail versenden.</block>
+  <block id="f6e08eba5ce5d68574b355f5717a86dc" category="paragraph">Ransomware-Vorfälle, die auf Ihren gemanagten Systemen erkannt wurden, werden als Warnmeldungen im Fenster „ _Ransomware Incidents_“ angezeigt. Dazu gehören Verschlüsselungsprozesse, verdächtige Dateiendungen, Ransomware-Aktivitäten und böswillige Aktivitäten. Im Fenster wird die Art des Vorfalls angezeigt, und es wird angezeigt, ob automatische Aktionen ausgeführt wurden, um das Problem zu beheben. Beispielsweise könnte eine Volume Snapshot Kopie generiert und in die Cloud gesendet werden.</block>
+  <block id="c175e8f1ccab51f02e03b9230eb127f4" category="paragraph">Sie können auf klicken <block ref="6be018d461f0945956e868c034bab91d" category="inline-image-macro-rx" type="image"></block> Um einen Vorfall zu erweitern, um die Anzahl der verschlüsselten Dateien anzuzeigen, die im verdächtigen Volume identifiziert wurden, die Arten von Dateierweiterungen und den Zeitpunkt, zu dem der Angriff stattgefunden hat.</block>
+  <block id="e7bcef4efd8d207a462e4d97fa8ee57f" category="inline-image-macro">Ein Screenshot, der das Ransomware-Störungs-Panel erweitert, um automatische Aktionen für Ihre Volumen zu zeigen.</block>
+  <block id="e330f9a5f861c839db51e2754e041f2b" category="paragraph"><block ref="e330f9a5f861c839db51e2754e041f2b" category="inline-image-macro-rx" type="image"></block></block>
+  <block id="603b2b6440f8dfa377b5dbdb05672545" category="paragraph">Sie können auf die Schaltfläche *Auflösen* klicken, um den Vorfall von der Benutzeroberfläche zu entfernen. Ein Dialogfeld erscheint, um zu sehen, ob der gemeldete Vorfall ein echter Ransomware-Vorfall war oder nicht. Klicken Sie auf *Ja*, wenn das Problem ein echter Ransomware-Vorfall war. Klicken Sie auf *Nein*, wenn das Problem nicht ein echter Ransomware-Vorfall war.</block>
+  <block id="088d3d49032d6dd1afda5114a23e63c3" category="list-text">Sie müssen über einen lokalen ONTAP-Cluster verfügen, der ONTAP 9.11 oder höher ausführt.</block>
+  <block id="46678f366c58742b82911dfe835f42e5" category="list-text">Sie müssen die *Anti_Ransomware*-Lizenz (ONTAP 9.11.1 +) auf mindestens einem Knoten im Cluster installiert haben.</block>
+  <block id="8ec0598f83d7373a63b0f0d6db7cd5a8" category="list-text">NetApp Autonomous Ransomware Protection (ARP) muss 30 Tage lang zum ersten Mal Learning Period (auch als „dry run“ bekannt) aktiviert sein, bevor er in den „aktiven Modus“ umgeschaltet wird. So hat es ausreichend Zeit, um Workload-Merkmale zu bewerten und mutmaßliche Ransomware-Angriffe korrekt zu melden.</block>
+  <block id="88a11892e7418e1eee8c952df9545b46" category="section-title">9 Januar 2023</block>
+  <block id="4e499a708b699475cdaf2e23cd596d11" category="section-title">Unterstützung wurde hinzugefügt, um Ransomware-Schutz-Benachrichtigungen per E-Mail und im Notification Center zu erhalten</block>
+  <block id="3348dcc393bde37af6464ca44f92a231" category="inline-link">Erfahren Sie, wie</block>
+  <block id="53bccb80a99ecb6d22ac23a5d83a662e" category="paragraph">Ransomware Protection ist in den BlueXP Notification Service integriert. Sie können Ransomware-Schutzbenachrichtigungen anzeigen, indem Sie in der BlueXP-Menüleiste auf die Benachrichtigungsglocke klicken. Sie können BlueXP auch so konfigurieren, dass Benachrichtigungen per E-Mail als Benachrichtigungen gesendet werden, damit Sie auch dann über wichtige Systemaktivitäten informiert werden können, wenn Sie nicht im System angemeldet sind. Die E-Mail kann an alle Empfänger gesendet werden, die auf Ransomware-Warnungen achten müssen.<block ref="4b31f56f66b4ac96107c1c8a3ca6ad6e" category="inline-link-rx"></block>.</block>
+  <block id="80e3c908d6ba93e1171a448d2123a640" category="sidebar">Überwachen Sie Ransomware-Warnungen im Benachrichtigungszentrum</block>
 </blocks>
